-> Make sure the footer never overlaps content without a scrollbar

--- a/static/css/bootstrap-idc.css
+++ b/static/css/bootstrap-idc.css
@@ -2,6 +2,10 @@
     font-family: system-ui;
 }
 
+.container-fluid.collection-details {
+    padding-bottom: 125px;
+}
+
 .collex-card {
     font-size: larger;
     border: 2px solid #707e9b;
